Fixed some spacing

--- a/src/components/CategoryCard/index.module.scss
+++ b/src/components/CategoryCard/index.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   position: relative;
   overflow: hidden;
-  margin: 0 0 1em 0;
+  margin: 1rem 1rem;
   background-color: $defaultDark;
 
   transition: transform 0.2s linear;
@@ -42,7 +42,6 @@
 
 .imageWrapper {
   position: relative;
-  margin-left: 5%;
 }
 
 .image {
