--- a/src/components/FilterTypes/index.module.scss
+++ b/src/components/FilterTypes/index.module.scss
@@ -1,19 +1,21 @@
 @import '../../variables.scss';
 
 .row {
+  margin: 0 1rem;
   display: flex;
   align-items: center;
 }
 
 .active,
 .notActive {
+  text-align: left;
   font-size: 16px;
-  margin-right: 7%;
+  padding: 0;
+  margin-right: 1rem;
   font-weight: 300;
 
   letter-spacing: 0.02em;
   height: 33px;
-  width: 83px;
   color: #fff;
   background: transparent;
   border: none;
